--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": ["http://localhost:3000", "0.0.0.0:3000"],
   "dependencies": {
     "@next/font": "^13.5.6",
     "@react-spring/web": "^9.7.3",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
     "postcss": "^8.4.31",
