--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": ["http://localhost:3000", "0.0.0.0:3000"],
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@next/font": "^13.5.6",
     "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
